<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Weather App</string>
    <string name="today">Today</string>
    <string name="weekly">Next week</string>
    <string name="settings">Settings</string>
    <string name="pref_custom_location_key" translatable="false">LOCATION_KEY</string>
    <string name="pref_loc_default_value" translatable="false">Ankara</string>
    <string name="pref_unit_system_key" translatable="false">UNIT_SYSTEM_KEY</string>

    <string name="format_min_max_temp_imperial">Min: <xliff:g>%1$1.1f\u00b0</xliff:g>F, Max: <xliff:g>
        %2$1.1f\u00b0</xliff:g>F
    </string>

    <string name="format_temp_metric" translatable="false"><xliff:g>%1$1.1f\u00b0</xliff:g>C</string>
    <string name="format_temp_imperial" translatable="false"><xliff:g>%1$1.1f\u00b0</xliff:g>F</string>

    <string name="format_dateTime" translatable="false">%1$tA %1$td.%1$tm.%1$tY %1$tH:%1$tM</string>

    <string name="format_humidity" translatable="false">%%<xliff:g>%1$d</xliff:g></string>

    <string name="feels_like_temp_metric">Feels like %1$1.1f<xliff:g id="degree">\u00b0</xliff:g>C</string>
    <string name="feels_like_temp_imperial">Feels like %1$1.1f<xliff:g id="degree">\u00b0</xliff:g>F</string>

    <string name="format_pressure_metric" translatable="false">%1$1.0f mb</string>
    <string name="format_pressure_imperial" translatable="false">%1$1.0f in</string>

    <string name="format_wind_speed_metric" translatable="false">%1$1.0f km/h</string>
    <string name="format_wind_speed_imperial" translatable="false">%1$1.0f mph</string>

    <string name="format_precip_metric" translatable="false">%1$1.0f mm</string>
    <string name="format_precip_imperial" translatable="false">%1$1.0f in</string>

    <string name="format_visibility_metric" translatable="false">%1$1.0f km</string>
    <string name="format_visibility_imperial" translatable="false">%1$1.0f mi</string>
    <string name="loading">Loading</string>
    <string name="wind_label">Wind :</string>
    <string name="pressure_label">Pressure :</string>
    <string name="visiblity_label">Visibility :</string>
    <string name="humidity_label">Humidity :</string>
    <string name="precip_label">Precipitation :</string>
    <string name="pref_use_device_location_key" translatable="false">USE_DEVICE_LOCATION</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_switch_title">Use device weatherLocation</string>
    <string name="pref_switch_summary">Allow the app to get your weatherLocation</string>
    <string name="preference_unit_category_title">Units</string>
    <string name="pref_units_metric_value" translatable="false">METRIC</string>
    <string name="preference_location_category_title">Weather Location</string>
    <string name="pref_unit_system_title">Unit System</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_imperial_value" translatable="false">IMPERIAL</string>
    <string name="format_min_max_temp_metric">Min: <xliff:g>%1$1.1f\u00b0</xliff:g>C, Max: <xliff:g>
        %2$1.1f\u00b0</xliff:g>C
    </string>
    <string name="no_permissions">Please set location manually in settings</string>
    <string name="gps_status_enabled">GPS is Enabled</string>
    <string name="gps_status_disabled">GPS is Disabled</string>
    <string name="gps_required_title">GPS Required</string>
    <string name="gps_required_body">Enable GPS otherwise location tracking won\\\'t work</string>
    <string name="action_settings">Settings</string>
</resources>
