<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
            app:title="@string/preference_location_category_title">
        <SwitchPreference
                app:key="@string/pref_use_device_location_key"
                app:title="@string/pref_switch_title"
                app:summary="@string/pref_switch_summary"
                app:defaultValue="true"
                app:disableDependentsState="true"/>

        <EditTextPreference
                app:key="@string/pref_custom_location_key"
                app:defaultValue="@string/pref_loc_default_value"
                app:useSimpleSummaryProvider="true"
                app:title="@string/pref_location_title"
                app:dependency="USE_DEVICE_LOCATION"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/preference_unit_category_title">
        <ListPreference
                app:key="@string/pref_unit_system_key"
                app:title="@string/pref_unit_system_title"
                app:useSimpleSummaryProvider="true"
                app:defaultValue="@string/pref_units_metric_value"
                app:entries="@array/unitSystemEntries"
                app:entryValues="@array/unitSystemValues"/>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>