<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="vm" type="tr.com.homesoft.weatherapp.ui.view.current.CurrentViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.view.current.CurrentFragment">
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline1"
                app:layout_constraintGuide_percent="0.5"/>

        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline2"
                app:layout_constraintGuide_percent="0.5"/>
        <androidx.constraintlayout.widget.Group
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:constraint_referenced_ids="progressBar_loading,textView_loading"
                android:id="@+id/group_loading"
                android:visibility="@{vm.loading}"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar_loading"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <TextView
                android:text="@string/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_loading"
                app:layout_constraintStart_toStartOf="@+id/progressBar_loading"
                app:layout_constraintEnd_toEndOf="@+id/progressBar_loading"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/progressBar_loading"/>

        <androidx.constraintlayout.widget.Group
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/group_weather_info"
                android:visibility="@{!vm.loading}"
                app:constraint_referenced_ids="textView_condition,textView_temperature,textView_feels_like,textView_wind_label,textView_precipitation_label,textView_visibility_label,textView_humidity_label,textView_pressure_label,textView_wind_speed,textView_wind_direction,imageView2,textView_precipitation,textView_visibility,textView_humidity,textView_pressure,weather_icon"/>
        <TextView
                android:text="@{vm.weather.conditionText}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_condition" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                tools:text="Patchy rain possible"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.04" app:layout_constraintHorizontal_bias="0.04"/>
        <TextView
                app:formatTemp="@{vm.weather.temperature}"
                app:metric="@{safeUnbox(vm.metric)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_temperature" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                tools:text="25.0\u00b0C"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
                app:layout_constraintTop_toTopOf="@+id/weather_icon"
                app:layout_constraintBottom_toBottomOf="@+id/weather_icon"/>
        <ImageView
                android:src="@{vm.weather.conditionIconUrl}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/weather_icon"
                tools:srcCompat="@drawable/art_clouds" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline1" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.207"
                android:adjustViewBounds="true"
                app:layout_constraintDimensionRatio="1:1" app:layout_constraintHorizontal_bias="0.593"
                app:layout_constraintWidth_percent="0.25" tools:ignore="ContentDescription"/>
        <TextView
                app:formatFeelsLikeTemperature="@{vm.weather.feelsLikeTemperature}"
                app:metric="@{safeUnbox(vm.metric)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_feels_like" app:layout_constraintStart_toStartOf="@+id/textView_temperature"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_temperature" tools:text="Feels like 25.0\u00b0C"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
        <!-- Wind Label -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_wind_label" android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="@+id/guideline2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" tools:text="Wind :" android:text="@string/wind_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
        <!-- Precipitation Label -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_precipitation_label" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_wind_label"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" tools:text="Precipitation :"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:text="@string/precip_label"/>
        <!-- Visibility Label -->
        <TextView
                android:text="@string/visiblity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_visibility_label"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_precipitation_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" tools:text="Visibility :"/>
        <!-- Humidity Label -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_humidity_label"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                tools:text="Humidity :" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_visibility_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:text="@string/humidity_label"/>
        <!-- Pressure Label -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_pressure_label"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" tools:text="Pressure :" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_humidity_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:text="@string/pressure_label"/>
        <TextView
                app:formatWind="@{vm.weather.windSpeed}"
                app:metric="@{safeUnbox(vm.metric)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_wind_speed"
                app:layout_constraintTop_toTopOf="@+id/textView_wind_label"
                app:layout_constraintBottom_toBottomOf="@+id/textView_wind_label"
                app:layout_constraintStart_toEndOf="@+id/textView_wind_label" android:layout_marginStart="8dp"
                tools:text="15 m/s" android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
        <TextView
                android:text="@{vm.weather.windDirection}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_wind_direction"
                tools:text="ENE"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintTop_toTopOf="@+id/textView_wind_speed"
                app:layout_constraintBottom_toBottomOf="@+id/textView_wind_speed"
                app:layout_constraintStart_toEndOf="@+id/textView_wind_speed" android:layout_marginStart="8dp"/>
        <ImageView
                android:src="@{vm.weather.windDegree}"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/textView_wind_direction"
                app:layout_constraintBottom_toBottomOf="@+id/textView_wind_direction"
                app:layout_constraintStart_toEndOf="@+id/textView_wind_direction"
                android:layout_marginStart="16dp"
                tools:ignore="ContentDescription"
                tools:srcCompat="@drawable/wind_direction_n"/>
        <TextView
                app:formatPrecipitaion="@{vm.weather.precipitationVolume}"
                app:metric="@{safeUnbox(vm.metric)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_precipitation"
                app:layout_constraintTop_toTopOf="@+id/textView_precipitation_label"
                app:layout_constraintBottom_toBottomOf="@+id/textView_precipitation_label"
                app:layout_constraintStart_toEndOf="@+id/textView_precipitation_label"
                android:layout_marginStart="8dp" tools:text="15 mm"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
        <TextView
                app:formatVisibilityDistance="@{vm.weather.visibilityDistance}"
                app:metric="@{safeUnbox(vm.metric)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_visibility"
                app:layout_constraintTop_toTopOf="@+id/textView_visibility_label"
                app:layout_constraintBottom_toBottomOf="@+id/textView_visibility_label"
                app:layout_constraintStart_toEndOf="@+id/textView_visibility_label" android:layout_marginStart="8dp"
                tools:text="80 km" android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
        <TextView
                android:text="@{@string/format_humidity(vm.weather.humidity)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_humidity"
                app:layout_constraintTop_toTopOf="@+id/textView_humidity_label"
                app:layout_constraintBottom_toBottomOf="@+id/textView_humidity_label"
                app:layout_constraintStart_toEndOf="@+id/textView_humidity_label" android:layout_marginStart="8dp"
                tools:text="85%" android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
        <TextView
                app:formatPressure="@{vm.weather.pressure}"
                app:metric="@{safeUnbox(vm.metric)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_pressure"
                app:layout_constraintTop_toTopOf="@+id/textView_pressure_label"
                app:layout_constraintBottom_toBottomOf="@+id/textView_pressure_label"
                app:layout_constraintStart_toEndOf="@+id/textView_pressure_label" android:layout_marginStart="8dp"
                tools:text="1075 mb" android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>